--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src", "tests"]
+  "include": ["src", "tests", "bin/ts-ink-storybook.ts"]
 }
