--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/src/index.js",
+      "types": "./dist/src/index.d.ts"
     },
     "./cli": {
-      "import": "./dist/cli/index.js",
-      "types": "./dist/cli/index.d.ts"
+      "import": "./dist/src/cli/index.js",
+      "types": "./dist/src/cli/index.d.ts"
     },
     "./ts": {
       "import": "./bin/ts-ink-storybook.ts",
